--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,8 +12,8 @@ body {
     margin-top: 10%;
 }
 
-.heightGraphPage {
-    height: 100vh;
-    overflow-y: hidden;
+#sticky-sidebar {
+    position:fixed;
+    max-width: 20%;
 }
 
