--- a/CSS/style.css
+++ b/CSS/style.css
@@ -163,6 +163,28 @@ td {
     color: #df861d;
 }
 
+/* Pie Chart */
+
+.pieChart {
+    position: fixed;
+    right: 2%;
+    top: 10%;
+    max-width: 20%;
+    height: 35%;
+}
+
+svg {
+    width: 100%;
+    height: 100%;
+}
+
+circle {
+    fill: yellowgreen;
+    stroke: #655;
+    stroke-width: 60;
+}
+
+
 
 
 
